# rust-tcpserver-service-example

./: Cargo.toml  README.md  docs.sh  run.sh  test.sh
service/: Cargo.toml
service/src/: lib.rs  message.rs  server.rs
service/src/server/: compress.rs  connection.rs  state.rs  stats.rs
test-client/: Cargo.toml
test-client/src/: client.rs  main.rs
