[package]
name = "test-client"
version = "0.1.0"
authors = ["Richard <qpotizo@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
service = { path = "../service" }

tokio = { version = "0.2", features = ["full"] }
zerocopy = "0.3.0"
byteorder = "1.3.4"
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3.0"
bytes = "0.5"
rand = "0.7.3"